fix: align hamburger menu on mobile

--- a/src/containers/nav/theme.css
+++ b/src/containers/nav/theme.css
@@ -12,13 +12,9 @@
   width: 100%;
 }
 
-.navbar-default .navbar-brand,
-.navbar-default .navbar-brand:focus,
-.navbar-default .navbar-brand:hover {
-  font-family: "Open Sans";
-  text-transform: uppercase;
-  color: #FFFFFF;
-  font-size: 3em;
+.navbar-default .navbar-toggle {
+  margin-top: 25px;
+  margin-right: 25px;
 }
 
 .navbar-default .navbar-nav>li>a {
@@ -27,18 +23,9 @@
   padding-left: 2em;
 }
 
-.navbar-default .navbar-brand span,
-.navbar-default .navbar-brand:focus span,
-.navbar-default .navbar-brand:hover span,
 .navbar-default .navbar-nav>li>a:focus,
 .navbar-default .navbar-nav>li>a:hover {
   color: #66CBB4;
-}
-
-.navbar-default .navbar-brand span,
-.navbar-default .navbar-brand:focus span,
-.navbar-default .navbar-brand:hover span {
-  font-family: 'Marydale', Arial;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -47,7 +34,10 @@
 
 @media screen and (max-width: 460px) {
   .navbar-default .navbar-brand {
-    font-size: 2em;
+    padding-left: 0;
+  }
+  .navbar-default .navbar-brand .img-responsive {
+    height: inherit;
   }
   .navbar-default .navbar-nav>li>a {
     padding-left: 0.75em;
